--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">        
     <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700;800&family=Unbounded&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/6efc0512d4.js" crossorigin="anonymous"></script>
     <title>JobFinder</title>
 </head>
 <body>
@@ -12,7 +16,10 @@
         <header>
             <nav>
                 <div class="nav-container">
-                    <img id="logo" src="css/logo.png" alt="JobFinder">
+                    <a href="index.html">
+                        <img id="logo" src="css/logo.png" alt="JobFinder">
+                    </a>
+                    <i class="fas fa-bars btn-menumobile"></i>
                     <ul>
                         <li><a href="#">Encontrar vaga</a></li>
                         <li><a href="#">Enviar vaga</a></li>
@@ -256,5 +263,7 @@
             </div>
         </footer>
     </div>
+    <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
 </body>
 </html>
