--- a/findjobs.html
+++ b/findjobs.html
@@ -27,25 +27,39 @@
                     </ul>
                 </div>
             </nav>
-            <div id="main-banner">
+        </header>
+        <main id="lastjobs-container" class="wrapper">
+            <h1>Busque a sua vaga</h1>
+            <div id="job-filter">
                 <div id="search-form">
-                    <h1>A maneira mais fácil de encontrar seu novo emprego</h1>
-                    <p>Conecte-se de forma gratuita as melhores empresas e consiga o emprego dos seus sonhos.</p>
                     <form>
-                        <input type="text" name="Job" placeholder="Digite o cargo">
+                        <input type="text" name="job" placeholder="Digite o cargo">
                         <select name="region">
                             <option value="">Todos os estados</option>
                         </select>
                         <select name="category">
                             <option value="">Categoria</option>
-                            <input type="submit" value="Pesquisar">
                         </select>
+                        <input type="submit" value="Pesquisar">
                     </form>
                 </div>
             </div>
-        </header>
-        <main id="lastjobs-container" class="wrapper">
-            <h1>Últimas vagas enviadas</h1>
+            <div id="type-filter">
+                <ul>
+                    <li>
+                        <input type="checkbox" checked><label>CLT</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" checked><label>PJ</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" checked><label>Home Office</label>
+                    </li>
+                    <li>
+                        <input type="checkbox" checked><label>Freelancer</label>
+                    </li>
+                </ul>
+            </div>
             <ul>
                 <li>
                     <a href="#" class="clickarea">
@@ -121,89 +135,9 @@
                 </li>
             </ul>
             <div class="btnjobs-container">
-                <a href="#" class="btn-jobs">Ver mais vagas</a>
+                <a href="#" class="btn-jobs">Carregar mais vagas</a>
             </div>
         </main>
-        <section id="sendjobs-container">
-            <div id="sendjobs-inner" class="wrapper">
-                <h2>Envie uma vaga que será vista por milhares de candidatos</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa praesentium eveniet accusantium commodi. Neque reiciendis commodi, consectetur cupiditate soluta voluptate at, aspernatur debitis quas aliquam placeat totam sunt. Quod, amet.</p>
-                <a href="#" class="light-btn">Enviar vaga</a>
-            </div>
-        </section>
-        <section id="status-container" class="wrapper">
-            <h2 class="title-center">Estatísticas do JobFinder</h2>
-            <p class="p-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem quod alias dolore ut voluptas voluptatum placeat facere quaerat magni maxime quos illo, unde, nostrum, aliquid libero perspiciatis rerum ipsam quibusdam.</p>
-            <div>
-                <div class="status-box">
-                    <span class="status-qtd">150</span>
-                    <p class="status-text">Vagas abertas</p>
-                </div>
-                <div class="status-box">
-                    <span class="status-qtd">250</span>
-                    <p class="status-text">Candidatos contratados</p>
-                </div>
-                <div class="status-box">
-                    <span class="status-qtd">50</span>
-                    <p class="status-text">Empresas participantes</p>
-                </div>
-                <div class="status-box">
-                    <span class="status-qtd">550</span>
-                    <p class="status-text">Candidatos</p>
-                </div>
-            </div>
-        </section>
-        <section id="testmony-container">
-            <div class="wrapper">
-                <h2>Veja o que os candidatos dizem</h2>
-                <p class="p-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad in labore quo voluptatum aperiam, mollitia nobis illo culpa est eveniet rerum cupiditate minima quaerat et ab beatae doloremque, quis itaque!</p>
-                <div class="testmony-box">
-                    <p class="testmony-msg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolores fugit cum explicabo sapiente necessitatibus rerum, quo consequatur ducimus accusantium modi, voluptatibus temporibus omnis porro?</p>
-                    <img src="css/avatar1.png" alt="">
-                    <p class="testmony-name">João</p>
-                </div>
-                <div class="testmony-box">
-                    <p class="testmony-msg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolores fugit cum explicabo sapiente necessitatibus rerum, quo consequatur ducimus accusantium modi, voluptatibus temporibus omnis porro?</p>
-                    <img src="css/avatar2.png" alt="">
-                    <p class="testmony-name">Maria</p>
-                </div>
-                <div class="testmony-box">
-                    <p class="testmony-msg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolores fugit cum explicabo sapiente necessitatibus rerum, quo consequatur ducimus accusantium modi, voluptatibus temporibus omnis porro?</p>
-                    <img src="css/avatar3.png" alt="">
-                    <p class="testmony-name">Pedro</p>
-                </div>
-                <div class="testmony-box">
-                    <p class="testmony-msg">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia dolores fugit cum explicabo sapiente necessitatibus rerum, quo consequatur ducimus accusantium modi, voluptatibus temporibus omnis porro?</p>
-                    <img src="css/avatar4.png" alt="">
-                    <p class="testmony-name">Alexia</p>
-                </div>
-            </div>
-        </section>
-        <section id="blog-container" class="wrapper">
-            <h2 class="title-center">Últimos artigos do nosso blog</h2>
-            <p class="p-center">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur repellendus minima nihil magnam dicta consectetur cupiditate maxime, nobis quam exercitationem facere, consequatur aperiam minus ipsum! Exercitationem perferendis nostrum sit a.</p>
-            <div class="article-box">
-                <img src="css/blog1.jpg" alt="">
-                <h4><a href="#">Article title</a></h4>
-                <p class="article-date">05 de Fevereiro de 2019 | 10 comentários</p>
-                <p class="article-resume">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquid eligendi aperiam debitis. Suscipit aliquid, dolores autem officia recusandae similique dicta ut sequi.</p>
-                <a href="#" class="article-btn light-btn">Ler post</a>
-            </div>
-            <div class="article-box">
-                <img src="css/blog2.jpg" alt="">
-                <h4><a href="#">Article title</a></h4>
-                <p class="article-date">05 de Fevereiro de 2019 | 10 comentários</p>
-                <p class="article-resume">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquid eligendi aperiam debitis. Suscipit aliquid, dolores autem officia recusandae similique dicta ut sequi.</p>
-                <a href="#" class="article-btn light-btn">Ler post</a>
-            </div>
-            <div class="article-box">
-                <img src="css/blog3.jpg" alt="">
-                <h4><a href="#">Article title</a></h4>
-                <p class="article-date">05 de Fevereiro de 2019 | 10 comentários</p>
-                <p class="article-resume">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci aliquid eligendi aperiam debitis. Suscipit aliquid, dolores autem officia recusandae similique dicta ut sequi.</p>
-                <a href="#" class="article-btn light-btn">Ler post</a>
-            </div>
-        </section>
         <footer>
             <div class="wrapper">
                 <div class="footer-box">
