--- a/sendjobs.html
+++ b/sendjobs.html
@@ -12,7 +12,7 @@
     <title>JobFinder</title>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="sendjobs">
         <header>
             <nav>
                 <div class="nav-container">
