--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h1>Últimas vagas enviadas</h1>
             <ul>
                 <li>
-                    <a href="#" class="clickarea">
+                    <a href="job.html" class="clickarea">
                         <div class="company-box">
                             <img src="css/googlelogo.png" alt="Google Logo">
                             <div class="company-info">
