--- a/job.html
+++ b/job.html
@@ -17,13 +17,13 @@
             <nav>
                 <div class="nav-container">
                     <a href="index.html">
-                        <img id="logo" src="css/logo.png" alt="JobFinder">
+                        <img id="logo" src="img/logo.png" alt="JobFinder">
                     </a>
                     <i class="fas fa-bars btn-menumobile"></i>
                     <ul>
                         <li><a href="findjobs.html">Encontrar vaga</a></li>
                         <li><a href="sendjobs.html">Enviar vaga</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="job.html">Contato</a></li>
                     </ul>
                 </div>
             </nav>
@@ -48,7 +48,7 @@
 			<main id="job-container">
 			    <div id="about-company-contaienr">
 			    	<h2 class="page-title">Sobre a empresa</h2>
-			    	<img src="css/company.jpg" id="company-img" alt="Como é o Google">
+			    	<img src="img/company.jpg" id="company-img" alt="Como é o Google">
 			    	<p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec at lectus vel lectus aliquet tristique. Morbi interdum odio eget tellus mattis malesuada. Proin tempus magna ac lorem elementum efficitur. Aenean vitae elit ullamcorper, pharetra nisl sed, tempor nibh. Suspendisse feugiat nisl eu metus molestie, ac vulputate lorem finibus.</p>
 			    </div>
 			    <div id="about-job-container">
@@ -76,7 +76,7 @@
 		    </main>
 
 		    <aside id="companyinfo-container">
-                <img src="css/googlelogo.png" alt="Google logo">
+                <img src="img/googlelogo.png" alt="Google logo">
                 <div class="job-type">
                   <span class="clt">CLT</span>
                 </div>
