--- a/sendjobs.html
+++ b/sendjobs.html
@@ -17,13 +17,13 @@
             <nav>
                 <div class="nav-container">
                     <a href="index.html">
-                        <img id="logo" src="css/logo.png" alt="JobFinder">
+                        <img id="logo" src="img/logo.png" alt="JobFinder">
                     </a>
                     <i class="fas fa-bars btn-menumobile"></i>
                     <ul>
                         <li><a href="findjobs.html">Encontrar vaga</a></li>
-                        <li><a href="#">Enviar vaga</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="sendjobs.html">Enviar vaga</a></li>
+                        <li><a href="job.html">Contato</a></li>
                     </ul>
                 </div>
             </nav>
@@ -62,7 +62,7 @@
             <div class="wrapper">
                 <div class="footer-box">
                     <div class="company-footer">
-                        <img src="css/logo.png" alt="logo">
+                        <img src="img/logo.png" alt="logo">
                         <h2>JobFinder</h2>
                         <p>A maneira mais fácil de encontrar seu próximo emprego.</p>
                     </div>
