--- a/findjobs.html
+++ b/findjobs.html
@@ -17,13 +17,13 @@
             <nav>
                 <div class="nav-container">
                     <a href="index.html">
-                        <img id="logo" src="css/logo.png" alt="JobFinder">
+                        <img id="logo" src="img/logo.png" alt="JobFinder">
                     </a>
                     <i class="fas fa-bars btn-menumobile"></i>
                     <ul>
                         <li><a href="findjobs.html">Encontrar vaga</a></li>
                         <li><a href="sendjobs.html">Enviar vaga</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="job.html">Contato</a></li>
                     </ul>
                 </div>
             </nav>
@@ -64,7 +64,7 @@
                 <li>
                     <a href="#" class="clickarea">
                         <div class="company-box">
-                            <img src="css/googlelogo.png" alt="Google Logo">
+                            <img src="img/googlelogo.png" alt="Google Logo">
                             <div class="company-info">
                                 <h3>Developer</h3>
                                 <p>Google</p>
@@ -82,7 +82,7 @@
                 <li>
                     <a href="#" class="clickarea">
                         <div class="company-box">
-                            <img src="css/ibmlogo.png" alt="Google Logo">
+                            <img src="img/ibmlogo.png" alt="Google Logo">
                             <div class="company-info">
                                 <h3>DBA</h3>
                                 <p>IBM</p>
@@ -100,7 +100,7 @@
                 <li>
                     <a href="#" class="clickarea">
                         <div class="company-box">
-                            <img src="css/linkedinlogo.png" alt="Google Logo">
+                            <img src="img/linkedinlogo.png" alt="Google Logo">
                             <div class="company-info">
                                 <h3>Front End Developer</h3>
                                 <p>Linkedin</p>
@@ -118,7 +118,7 @@
                 <li>
                     <a href="#" class="clickarea">
                         <div class="company-box">
-                            <img src="css/facebooklogo.png" alt="Google Logo">
+                            <img src="img/facebooklogo.png" alt="Google Logo">
                             <div class="company-info">
                                 <h3>Full Stack Developer</h3>
                                 <p>Facebook</p>
@@ -142,7 +142,7 @@
             <div class="wrapper">
                 <div class="footer-box">
                     <div class="company-footer">
-                        <img src="css/logo.png" alt="logo">
+                        <img src="img/logo.png" alt="logo">
                         <h2>JobFinder</h2>
                         <p>A maneira mais fácil de encontrar seu próximo emprego.</p>
                     </div>
